Fix alignment for <Button as="a" />

--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -4,6 +4,7 @@
   border-radius: var(--rounded-lg);
   box-sizing: border-box;
   color: black;
+  text-align: center;
   text-decoration: none;
   display: inline-block;
   background-color: var(--accentColor);
